Fix grand total of multi currency list table report

BUG: 499116
FIXED-IN: 5.2